Prueba bugueada de header en el admin en version mobile

--- a/frontend/src/variables.css
+++ b/frontend/src/variables.css
@@ -7,6 +7,7 @@
     --fondo:#FFF7F7;
     --tarjeta:#ffffff;
     --categorias:#3924af;
+    --header-admin:#11101d;
   /* Medidas */
     --border-radius-box:20px;
     --border-radius: 50px;
